# LearnOpenGL

./: .swp  CMakeLists.txt  main.c  openglApp  readme.md
coordinatesystems/: demo1.cpp  demo2.cpp  demo3.cpp  ex1.cpp  note.txt
coordinatesystems/shadersources/: transform.fs  transform.vs
hellotriangle/: exercise.cpp  readme.md
hellowindow/: main.cpp  readme.md
include/: shader.hpp  stb_image.h
include/glad/: glad.h
shader/: demo3.cpp  main.cpp  readme.md
shader/shadersource/: shader.fs  shader.vs
src/: glad.c  shader.cpp
textures/: concepts.txt  demo1.cpp  demo2.cpp  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
textures/resources/: texture-ex1.fs  texture-ex4.fs
transformations/: ex1.cpp  ex2.cpp  transformations.cpp
